# ryuuko-chatbot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_vi.md  SECURITY.md  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ryuuko.py
config/: config.json  gateway.json
docs/: ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  NOTE.md  SETUP.md
documents/: NOTE.md
jules-scratch/verification/: verify_dashboard.py
scripts/: run_docker.sh  setup.sh
src/: __init__.py  __main__.py  call_api.py  database.py  functions.py  load_config.py  main.py  memory.py  memory_store.py  ratelimit.py  request_queue.py  user_config.py
src/bot/: __init__.py  main.py
src/bot/api/: __init__.py  client.py
src/bot/commands/: __init__.py  admin.py  basic.py  system.py  user.py
src/bot/events/: messages.py
src/bot/services/: auth.py
src/config/: __init__.py  loader.py  user.py  user_config.py
src/core/: __init__.py  bot.py  call_api.py  functions.py  handlers.py
src/core/api/: __init__.py  client.py
src/core/commands/: __init__.py  admin.py  basic.py  system.py  user.py
src/core/events/: __init__.py  messages.py
src/core/services/: __init__.py  auth.py  (+1 more)
src/gateway/: logic.py  main.py
src/llm_services/: main.py
src/ryuuko_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/storage/: database.py  memory.py
src/utils/: __init__.py  health.py  health_check.py  logger.py  queue.py  request_queue.py
tests/: conftest.py  test_functions.py  test_handlers.py  test_init.sh
tests/commands/: test_admin.py  test_basic.py  test_system.py  test_user.py
tests/events/: test_messages.py
tests/services/: test_auth.py
(+2 files in other folders)
