[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ryuuko-workspace"
version = "1.3.1"
description = "A monorepo for the Ryuuko project."
requires-python = ">=3.11"
# This file is for managing shared development tools and dependencies.
# Packages inside packages/ have their own pyproject.toml files.

# Dependencies for packages that are not yet self-contained.
# TODO: Move these to their respective packages (e.g., packages/api)
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0"
]